Created simple request for recognize with saving of results
